--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "a fine piece of express art",
   "version": "0.0.1",
   "dependencies": {
+    "arangojs": "^3.3.1",
+    "body-parser": "^1.12.0",
+    "bower": "^1.3.12",
     "express": "^3.20.1"
   }
 }
