--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "arangojs": "^3.3.1",
     "body-parser": "^1.12.0",
     "bower": "^1.3.12",
-    "express": "^3.20.1"
+    "express": "^3.20.1",
+    "request": "^2.53.0"
   }
 }
