--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "dependencies": {
     "arangojs": "^3.3.1",
+    "async": "^0.9.0",
     "body-parser": "^1.12.0",
     "bower": "^1.3.12",
     "express": "^3.20.1",
