--- a/website/bower.json
+++ b/website/bower.json
@@ -18,6 +18,6 @@
     "react": "~0.12.2",
     "bootstrap": "~3.3.2",
 	"jquery": "~2.1.3",
-    "jquery-ui": "~1.11.3"
+    "jqueryui": "~1.11.3"
   }
 }
